# LLM_Project

./: .gitignore  README.md
project/: README.md  pyproject.toml
project/project/: 01_Answer_Eval.ipynb  02_Program_Eval.ipynb  03_fine_tune_eval.ipynb  notes.ipynb
project/project/Evaluate_metrics/: Answer.ipynb  Program.ipynb
project/project/Evaluate_metrics_summary_notebooks/: Answer.ipynb  Program.ipynb  answer_and_prog_eval.csv
project/project/answer_data/: Cot_prompt.csv  few_shot.csv  llm_exp_train_df.csv  train_df.csv  train_df_fault_tolerance.csv
project/project/program_data/: few_shot_program.csv  llm_exp_train_df_program.csv  train_df_program.csv
project/src/: evals.py  llm.py  models.py  paths.py  preprocess.py  pydantic_class.py
project/src/LLM_as_judge/: answer.py  program.py
project/src/answer_prompt/: CoT_style.py  basic.py  few_shot.py
project/src/program_prompt/: CoT_style.py  basic.py  few_shot.py  model_eval.py
