[tool.poetry]
name = "project"                # This can match your folder for clarity
version = "0.1.0"
description = ""
authors = ["keshan <keshansharp123@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
openai = "^1.64.0"
ipykernel = "^6.29.5"
matplotlib = "^3.10.1"
ace-tools = "^0.0"
ace-tools-open = "^0.1.0"
seaborn = "^0.13.2"
pydantic = "^2.10.6"
scipy = "^1.15.2"
ipywidgets = "^8.1.5"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
